# Semi24-Fileexplorer

./: .gitignore  CONFIG.md  Cargo.toml  LICENSE  README.md  build.rs  files.sqlite3  package-lock.json  package.json  time.txt  vite.config.js
Fileexplorer/: README.md
Fileexplorer/src/: index.html  main.js  styles.css
Fileexplorer/src-tauri/: Cargo.toml
Fileexplorer/src-tauri/src/: lib.rs
Test_dir/: maguwu
src/: index.html  main.js  main.rs  styles.css
src-tauri/: .gitattributes  .gitignore  Cargo.toml  build.exe.manifest  tauri.conf.json
src-tauri/data/config/: config.json
src-tauri/data/model/: eng_vocab.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  config_handler.rs  context_actions.rs  creating_database.rs  database_operations.rs  db_create.rs  db_search.rs  db_util.rs  dialogs.rs  file_information.rs  file_search.rs  global_stuff.rs  lib.rs  main.rs  manager.rs  old.css  rt_db_update.rs  searching_database.rs  show_files.rs  testing_database.rs
src-tauri/src/config/: color-settings.json  config.json
src-tauri/src/manager/: creating_database.rs  database_operations.rs  file_information.rs  searching_database.rs
src-tauri/src/neural_network/: config.py  create_diagramme.py  data_utils.py  dataset.py  deu_vocab.json  model.py  nearest_neighbors.py  post_hoc_alignment.py  skip_gram_model.py  skip_gram_model_old.py  train.py
src-tauri/src/neural_network/util/: create_diagramme.py  nearest_neighbors.py
