[package]
name = "file_explorer"
version = "0.1.0"
description = "File Explorer with a fast searching algorithm"
authors = ["you"]
edition = "2021"
build = "src/build.rs"

[[bin]]
path = "src/main.rs"
name = "Semi24-Fileexplorer"

[lib]
name = "file_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
rusqlite = { version = "0.33.0", features = ["bundled", "functions"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
num_cpus = "1.16.0"
jwalk = "0.8.1"
strsim = "0.11.1"
rayon = "1.10.0"
clipboard = "0.5"
opener = "0.7.2"
once_cell = "1.20.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-manifest = "1"

[dependencies.windows]
version = "0.60.0"  # Use the latest version available
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation"
]

[features]
mobile = []


