[package]
name = "file_explorer"
version = "0.1.0"
description = "File Explorer with a fast searching algorithm"
authors = ["you"]
edition = "2021"
build = "src/build.rs"

[[bin]]
path = "src/main.rs"
name = "Semi24-Fileexplorer"

[lib]
name = "file_explorer"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.1.0", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4"
rusqlite = { version = "0.34.0", features = ["bundled", "functions"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
num_cpus = "1.16.0"
jwalk = "0.8.1"
rayon = "1.10.0"
clipboard = "0.5"
opener = "0.7.2"
tch = "0.19.0"
crossbeam-channel = "0.5.14"
bytemuck = "1.22.0"
strsim = "0.11.1"
npm = "0.1.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-manifest = "1"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation"
]

[features]
mobile = []


