[package]
name = "file_explorer"
version = "0.1.0"
description = "File Explorer with a fast searching algorithm"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "file_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
r2d2 = "0.8.10"
rayon = "1.10.0"
tch = "0.19.0"
clipboard = "0.5.0"
rusqlite = { version = "0.34.0", features = ["bundled", "functions"] }
r2d2_sqlite = "0.27.0"
jwalk = "0.8.1"
strsim = "0.11.1"
opener = "0.7.2"
bytemuck = "1.22.0"
crossbeam-channel = "0.5.15"
num_cpus = "1.16.0"
chrono = "0.4.40"
copy_dir = "0.1.3"
regex = "1.11.1"

